--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,15 +45,15 @@
                         <div class="row">
                             <div class="col-lg-10"></div>
                             <div class="col-lg-2">
-                                <a class="login" href="#"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
+                                <a class="login grow2" href="#"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 col-lg-7">
                             <div class="text-bg">
-                                <span><img src="images/logo.png" class="grow" height="50px" width="50px"> WEBARCH</span>
-                                <h1>F O R M S</h1>
+                                <span><img src="images/logo.png" class="grow head-1" height="50px" width="50px"> WEBARCH</span>
+                                <h1 class="head2">F O R M S</h1>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, corrupti id reiciendis, quisquam culpa veniam pariatur doloribus facere, amet quis vitae. Earum atque quasi odio explicabo similique animi tenetur eius.
                                 </p>
                                 <a class="grow read_more" href="#"><i class="fas fa-meteor"></i> Get Started</a>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div id="ho_color" class="services_main">
-                        <i><img src="images/forms.png" alt="#"/></i>
+                        <i><img src="images/forms.png" class="grow2" alt="#"/></i>
 
                         <h3>Create Forms</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6 ">
                     <div id="ho_color" class="services_main">
-                        <i><img src="images/template.png" alt="#"/></i>
+                        <i><img src="images/template.png" class="grow2" alt="#"/></i>
 
                         <h3>Templates</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div id="ho_color" class="services_main">
-                        <i><img src="images/services_icon4.png " alt="#"/></i>
+                        <i><img src="images/services_icon4.png " class="grow2" alt="#"/></i>
 
                         <h3>Contact</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
@@ -121,5 +121,56 @@
     <!-- Local Js -->
     <script src="./js/index.js"></script>
 </body>
+
+<footer>
+    <div class="container-fluid ">
+        <div class="row">
+            <div class="col-md-4 p1">
+                <div class="text-center grow2">
+                    <img src="./images/logo.png" height="80" width="80">
+                </div>
+                <br>
+                <h5 class="webarch grow">Webarch - Architect Of The Web</h5>
+                <h5 class="webarch grow">SRMIST,KTR CHENNAI-603203</h5>
+
+            </div>
+            <div class="col-md-4 p1">
+                <h4 style="text-align: center;color:white;">GET CONNECTED</h4>
+                <hr class="light">
+                <ul class="social_icon d-flex justify-content-center ">
+                    <li> <a href="https://in.linkedin.com/company/webarchclub" target="blank"><i class="fab fa-linkedin grow"></i></a></li>
+                    <li> <a href="https://github.com/WebarchClub/" target="blank"><i class="fab fa-github grow"></i></a></li>
+                    <li> <a href="https://www.instagram.com/webarchclub/" target="blank"><i class="fab fa-instagram grow"></i></a></li>
+                    <li> <a href="https://www.facebook.com/webarchclub/" target="blank"><i class="fab fa-facebook grow"></i></a></li>
+                    <li> <a href="https://www.youtube.com/channel/UCiDFs4udzbnGkwypt1-c3tA" target="blank"><i class="fab fa-youtube grow"></i></a></li>
+                </ul>
+                <hr class="light">
+                <div class="text-center webarch-website grow2">
+                    <a href="https://webarchsrm.com/" target="_blank"><i class="fas fa-angle-double-right"></i> Visit Webarch Website</a>
+                </div>
+            </div>
+
+            <div class="col-md-4 p1">
+                <h4 style="text-align: center;color:white;">INFORMATION</h4>
+                <hr class="light">
+                <ul>
+                    <div class="footer_inner1 grow2">
+                        <li><a href="#"><i class="fas fa-angle-double-right " target="_blank"></i> Privacy Policy</a></li>
+                    </div>
+                    <div class="footer_inner1 grow2">
+                        <li><a href="#"><i class="fas fa-angle-double-right" target="_blank"></i> Terms & Condition</a></li>
+                    </div>
+                    <div class="footer_inner1 grow2">
+                        <li><a href="#"><i class="fas fa-angle-double-right" target="_blank"></i> Accessibility</a></li>
+                    </div>
+                </ul>
+            </div>
+            <div class="col-12 p1">
+                <hr class="light-100">
+                <h5 style="text-align: center;color:white;"> ©Webarch 2021</h5>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html>
