made homepage,services page and footer responsive

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,34 +80,34 @@
                         <h2>Services</h2>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <div id="ho_color" class="services_main">
                         <i><img src="images/forms.png" class="grow2" alt="#"/></i>
 
                         <h3>Create Forms</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
                         </p>
-                        <a class="read_more grow" href="#">More</a>
+                        <a class="read_more read_more2 grow" href="#">More</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 ">
+                <div class="col-md-4 col-sm-4 ">
                     <div id="ho_color" class="services_main">
                         <i><img src="images/template.png" class="grow2" alt="#"/></i>
 
                         <h3>Templates</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
                         </p>
-                        <a class="read_more grow" href="#">More</a>
+                        <a class="read_more read_more2 grow" href="#">More</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6">
+                <div class="col-md-4 col-sm-4">
                     <div id="ho_color" class="services_main">
                         <i><img src="images/services_icon4.png " class="grow2" alt="#"/></i>
 
                         <h3>Contact</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
                         </p>
-                        <a class="read_more grow" href="#">More</a>
+                        <a class="read_more read_more2 grow" href="#">More</a>
                     </div>
                 </div>
             </div>
