--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,9 +29,9 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#">Login</a>
-            <a href="#">Services</a>
+            <a href="#services">Services</a>
             <a href="#">Create Form</a>
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
         </div>
         <!-- Use any element to open the sidenav -->
         <span onclick="openNav()" id="nav-bars"><i class="fas fa-bars" ></i></span>
@@ -72,7 +72,7 @@
     <!-- end banner -->
 
     <!-- services section -->
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <div class="row text-center">
                 <div class=" col-md-12">
@@ -122,7 +122,7 @@
     <script src="./js/index.js"></script>
 </body>
 
-<footer>
+<footer id="contact">
     <div class="container-fluid ">
         <div class="row">
             <div class="col-md-4 p1">
