--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,34 @@
     <title>WebarchForms</title>
 </head>
 <body>
-    <h2>Webarch Forms</h2>
+     <section>
+    <div class="container">
+        <div class="forms-container">
+            <div class="login">
+                <form action="" class="login">
+                    
+                    <h2 class="login"><img src="logo.png" alt=""> Login</h2>
+                    <div class="input-field">
+                        <i class="fas fa-user"></i>
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="input-field">
+                        <i class="fas fa-lock"></i>
+                        <input type="password" placeholder="Password">
+                    </div>
+                    <a href="#">Forgot password?</a>
+                    <input type="submit" value="Login" class="btn-solid">
+                    <p class="social-text">Or Sign in with your Google Account</p>
+                    <div class="social-media">
+                        <a href="#" class="social-icon">
+                            <i class="fa fa-google" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
 
 
     <!-- Jquery -->
