--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,41 +9,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- Local Css -->
     <link rel="stylesheet" href="./css/style.css">
 
     <title>WebarchForms</title>
 </head>
+
 <body>
-     <section>
-    <div class="container">
-        <div class="forms-container">
-            <div class="login">
-                <form action="" class="login">
-                    
-                    <h2 class="login"><img src="logo.png" alt=""> Login</h2>
-                    <div class="input-field">
-                        <i class="fas fa-user"></i>
-                        <input type="email" placeholder="Email">
-                    </div>
-                    <div class="input-field">
-                        <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password">
-                    </div>
-                    <a href="#">Forgot password?</a>
-                    <input type="submit" value="Login" class="btn-solid">
-                    <p class="social-text">Or Sign in with your Google Account</p>
-                    <div class="social-media">
+    <section>
+        <div class="container">
+            <div class="forms-container">
+                <div class="login">
+                    <form action="" class="login">
+
+                        <h2 class="login"><img src="logo.png" alt=""> Login</h2>
+                        <div class="input-field">
+                            <i class="fas fa-user"></i>
+                            <input type="email" placeholder="Email">
+                        </div>
+                        <div class="input-field">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" placeholder="Password">
+                        </div>
+                        <a href="#">Forgot password?</a>
+                        <input type="submit" value="Login" class="btn-solid">
+                        <p class="social-text">Or Sign in with your Google Account</p>
+                        <!-- <div class="social-media"> -->
                         <a href="#" class="social-icon">
-                            <i class="fa fa-google" aria-hidden="true"></i>
+                            <i class="fab fa-google" aria-hidden="true"></i>
                         </a>
-                    </div>
-                </form>
+                        <!-- </div> -->
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
     <!-- Jquery -->
@@ -52,4 +55,5 @@
     <!-- Local Js -->
     <script src="./js/index.js"></script>
 </body>
+
 </html>
