--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,34 +18,41 @@
 </head>
 
 <body>
-    <section>
+     <section>
         <div class="container">
             <div class="forms-container">
                 <div class="login">
                     <form action="" class="login">
 
-                        <h2 class="login"><img src="logo.png" alt=""> Login</h2>
-                        <div class="input-field">
+                        <h2 class="login text-center"><img src="logo.png" alt=""> Login</h2>
+                        <div class="input-field text-center">
                             <i class="fas fa-user"></i>
                             <input type="email" placeholder="Email">
                         </div>
-                        <div class="input-field">
+                        <div class="input-field text-center">
                             <i class="fas fa-lock"></i>
                             <input type="password" placeholder="Password">
                         </div>
-                        <a href="#">Forgot password?</a>
-                        <input type="submit" value="Login" class="btn-solid">
-                        <p class="social-text">Or Sign in with your Google Account</p>
+                        <a  class="forgot my-2 text-center text-decoration-underline" href="#">Forgot password?</a>
+                        <input type="submit" value="Login" class="btn-solid my-2 mx-5">
+                        <p class="social-text text-center">Or Sign in with your Google Account</p>
                         <!-- <div class="social-media"> -->
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-google" aria-hidden="true"></i>
-                        </a>
+                        <button>
+                        <img  class="images" src="google.png" alt="">
+                        </button>
+                        <p class="Or text-center my-2">----- Or -----</p>
+                        <input type="#" value="Register Now" class="btn">
+
                         <!-- </div> -->
                     </form>
+                </div>
+                <div class="panel left-panel">
+                    <img src="desk.png" class="image" alt="">
                 </div>
             </div>
         </div>
     </section>
+
 
 
     <!-- Jquery -->
