--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
         <!-- header inner -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Login</a>
+            <a href="./login.html">Login</a>
             <a href="#services">Services</a>
             <a href="#">Create Form</a>
             <a href="#contact">Contact</a>
@@ -45,7 +45,7 @@
                         <div class="row">
                             <div class="col-lg-10"></div>
                             <div class="col-lg-2">
-                                <a class="login grow2" href="#"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
+                                <a class="login grow2" href="./login.html"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
                             </div>
                         </div>
                     </div>
