added navigations arrows

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,6 +65,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="down-arrow text-center">
+                        <a href="#services"> <i class="fas fa-arrow-down"></i></a>
+                    </div>
             </div>
             </section>
         </div>
