corrected login page in mobile view

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,14 +44,14 @@
                             <input type="password" placeholder="Password">
                         </div>
                         <a class="forgot my-2 text-center text-decoration-underline" href="#">Forgot password?</a>
-                        <input type="submit" value="Login" class="btn-solid grow my-2 mx-5">
+                        <button type="submit" value="Login" class="btn-solid grow my-2 mx-5">LOGIN</button>
                         <p class="social-text text-center">Or Sign in with your Google Account</p>
                         <div class="social-media text-center">
                             <button class="text-center">
                         <img  class="images grow" src="./images/google.png" alt="google image">
                         </button>
                             <p class="Or text-center my-2">----- Or -----</p>
-                            <input type="#" value="Register Now" class="btn">
+                            <button type="#" class="btn">Register Now</button>
 
                         </div>
                     </form>
