--- a/frontend/login.html
+++ b/frontend/login.html
@@ -44,7 +44,9 @@
                             <input type="password" placeholder="Password">
                         </div>
                         <a class="forgot my-2 text-center text-decoration-underline" href="#">Forgot password?</a>
-                        <button type="submit" value="Login" class="btn-solid grow my-2 mx-5">LOGIN</button>
+                        <div class="text-center">
+                            <button type="submit" value="Login" class="btn-solid grow my-2">LOGIN</button>
+                        </div>
                         <p class="social-text text-center">Or Sign in with your Google Account</p>
                         <div class="social-media text-center">
                             <button class="text-center">
