--- a/frontend/login.html
+++ b/frontend/login.html
@@ -36,7 +36,7 @@
 
                         <h2 class="login text-center"><img src="./images/logo.png" alt=""> Login</h2>
                         <div class="input-field text-center">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-envelope"></i>
                             <input type="email" placeholder="Email">
                         </div>
                         <div class="input-field text-center">
@@ -53,7 +53,7 @@
                         <img  class="images grow" src="./images/google.png" alt="google image">
                         </button>
                             <p class="Or text-center my-2">----- Or -----</p>
-                            <button type="#" class="btn">Register Now</button>
+                            <a href="./register.html" button class="btn">Register Now</a>
 
                         </div>
                     </form>
