removed google auth

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -45,15 +45,15 @@
                         </div>
                         <a class="forgot my-2 text-center text-decoration-underline" href="#">Forgot password?</a>
                         <div class="text-center">
-                            <button type="submit" value="Login" class="btn-solid grow my-2">LOGIN</button>
+                            <button type="submit" value="Login" class="btn-solid grow my-2">Login</button>
                         </div>
-                        <p class="social-text text-center">Or Sign in with your Google Account</p>
+                        <p class="social-text text-center">Or Register For New Account</p>
                         <div class="social-media text-center">
-                            <button class="text-center">
+                            <!-- <button class="text-center">
                         <img  class="images grow" src="./images/google.png" alt="google image">
-                        </button>
-                            <p class="Or text-center my-2">----- Or -----</p>
-                            <a href="./register.html" button class="btn">Register Now</a>
+                        </button> -->
+                            <!-- <p class="Or text-center my-2">----- Or -----</p> -->
+                            <a href="./register.html" button class="btn">Register</a>
 
                         </div>
                     </form>
