--- a/frontend/register.html
+++ b/frontend/register.html
@@ -50,13 +50,13 @@
                         <input type="password" placeholder="Confirm Password">
                     </div>
                     <button type="submit" class="regbtn grow btn">Register</button>
-                    <p class="text-center mb-1">----- Or -----</p>
+                    <!-- <p class="text-center mb-1">----- Or -----</p>
                     <div class="googlereg d-flex">
                         <p class="social-text text-center pt-1 me-2 ms-5">Sign in with your Google Account</p>
                         <button>
                             <img class="g-img grow " src="./images/google.png" alt="google signin">
                         </button>
-                    </div>
+                    </div> -->
                     <!-- <button type="submit" class="loginbtn btn my-0">Login</button> -->
                 </form>
             </div>
