correction in UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,13 +60,13 @@
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-5">
-                            <div class="text_img grow">
+                            <div class="text_img grow2">
                                 <figure><img src="images/ban_img.png" alt="#" /></figure>
                             </div>
                         </div>
                     </div>
                     <div class="down-arrow text-center">
-                        <a href="#services"> <i class="fas fa-arrow-down"></i></a>
+                        <a href="#services"> <i class="fas fa-angle-double-down"></i></a>
                     </div>
             </div>
             </section>
@@ -115,7 +115,9 @@
                 </div>
             </div>
         </div>
+        <br>
     </div>
+
     <!-- end services section -->
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
