--- a/frontend/index.html
+++ b/frontend/index.html
@@ -159,16 +159,16 @@
             <div class="col-md-4 p1 ">
                 <h4 style="text-align: center;color:white;">INFORMATION</h4>
                 <hr class="light">
+                <div class="text-center webarch-website grow2">
+                    <a href="#" target="_blank"> Accessibility</a>
+                </div>
+                <div class="text-center webarch-website grow2">
+                    <a href="#" target="_blank"> Privacy Policy</a>
+                </div>
+                <div class="text-center webarch-website grow2">
+                    <a href="#" target="_blank"> Terms & Condition</a>
+                </div>
 
-                <div class="footer_inner1 grow2">
-                    <li><a href="#"><i class="fas fa-angle-double-right " target="_blank"></i> Privacy Policy</a></li>
-                </div>
-                <div class="footer_inner1 grow2">
-                    <li><a href="#"><i class="fas fa-angle-double-right" target="_blank"></i> Terms & Condition</a></li>
-                </div>
-                <div class="footer_inner1 grow2">
-                    <li><a href="#"><i class="fas fa-angle-double-right" target="_blank"></i> Accessibility</a></li>
-                </div>
 
             </div>
             <div class="col-12 p1">
