corrected login responsiveness and added google signin

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -49,10 +49,10 @@
                         </div>
                         <p class="social-text text-center">Or Register For New Account</p>
                         <div class="social-media text-center">
-                            <!-- <button class="text-center">
+                            <button class="text-center">
                         <img  class="images grow" src="./images/google.png" alt="google image">
-                        </button> -->
-                            <!-- <p class="Or text-center my-2">----- Or -----</p> -->
+                        </button>
+                            <p class="Or text-center my-2">----- Or -----</p>
                             <a href="./register.html" button class="btn">Register</a>
 
                         </div>
