--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="logo" href="favicon.png">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <!-- Fontawesome -->
@@ -87,34 +88,34 @@
                         <h2>Services</h2>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
-                    <div id="ho_color" class="services_main">
-                        <i><img src="images/forms.png" class="grow2" alt="#"/></i>
+                <div class="col-md-4 col-sm-4" data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                    <div id="ho_color " class="services_main ">
+                        <i><img src="images/forms.png " class="grow2 " alt="# "/></i>
 
                         <h3>Create Forms</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
                         </p>
-                        <a class="read_more read_more2 grow" href="#">More</a>
+                        <a class="read_more read_more2 grow " href="# ">More</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 ">
-                    <div id="ho_color" class="services_main">
-                        <i><img src="images/template.png" class="grow2" alt="#"/></i>
+                    <div id="ho_color " class="services_main " data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                        <i><img src="images/template.png " class="grow2 " alt="# "/></i>
 
                         <h3>Templates</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
                         </p>
-                        <a class="read_more read_more2 grow" href="#">More</a>
+                        <a class="read_more read_more2 grow " href="# ">More</a>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-4">
-                    <div id="ho_color" class="services_main">
-                        <i><img src="images/services_icon4.png " class="grow2" alt="#"/></i>
+                <div class="col-md-4 col-sm-4 " data-aos=" fade-right " data-aos-duration="1200 " data-aos-easing="ease-in-out ">
+                    <div id="ho_color " class="services_main ">
+                        <i><img src="images/services_icon4.png " class="grow2 " alt="# "/></i>
 
                         <h3>Contact</h3>
                         <p>ncididunt ut labore et dolore magna aliqua
                         </p>
-                        <a class="read_more read_more2 grow" href="#">More</a>
+                        <a class="read_more read_more2 grow " href="# ">More</a>
                     </div>
                 </div>
             </div>
@@ -124,59 +125,59 @@
 
     <!-- end services section -->
     <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js " integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin=" anonymous "></script>
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8 " crossorigin="anonymous "></script>
     <!-- Local Js -->
-    <script src="./js/index.js"></script>
+    <script src="./js/index.js "></script>
 </body>
 
-<footer id="contact">
+<footer id="contact ">
     <div class="container-fluid ">
-        <div class="row">
-            <div class="col-md-4 p1">
-                <div class="text-center grow2">
-                    <img src="./images/logo.png" height="80" width="80">
+        <div class="row ">
+            <div class="col-md-4 p1 ">
+                <div class="text-center grow2 ">
+                    <img src="./images/logo.png " height="80 " width="80 ">
                 </div>
                 <br>
-                <h5 class="webarch grow">Webarch - Architect Of The Web</h5>
-                <h5 class="webarch grow">SRMIST,KTR CHENNAI-603203</h5>
+                <h5 class="webarch grow ">Webarch - Architect Of The Web</h5>
+                <h5 class="webarch grow ">SRMIST,KTR CHENNAI-603203</h5>
 
             </div>
-            <div class="col-md-4 p1">
-                <h4 style="text-align: center;color:white;">GET CONNECTED</h4>
-                <hr class="light">
+            <div class="col-md-4 p1 ">
+                <h4 style="text-align: center;color:white; ">GET CONNECTED</h4>
+                <hr class="light ">
                 <ul class="social_icon d-flex justify-content-center ">
-                    <li> <a href="https://in.linkedin.com/company/webarchclub" target="blank"><i class="fab fa-linkedin grow"></i></a></li>
-                    <li> <a href="https://github.com/WebarchClub/" target="blank"><i class="fab fa-github grow"></i></a></li>
-                    <li> <a href="https://www.instagram.com/webarchclub/" target="blank"><i class="fab fa-instagram grow"></i></a></li>
-                    <li> <a href="https://www.facebook.com/webarchclub/" target="blank"><i class="fab fa-facebook grow"></i></a></li>
-                    <li> <a href="https://www.youtube.com/channel/UCiDFs4udzbnGkwypt1-c3tA" target="blank"><i class="fab fa-youtube grow"></i></a></li>
+                    <li> <a href="https://in.linkedin.com/company/webarchclub " target="blank "><i class="fab fa-linkedin grow "></i></a></li>
+                    <li> <a href="https://github.com/WebarchClub/ " target="blank "><i class="fab fa-github grow "></i></a></li>
+                    <li> <a href="https://www.instagram.com/webarchclub/ " target="blank "><i class="fab fa-instagram grow "></i></a></li>
+                    <li> <a href="https://www.facebook.com/webarchclub/ " target="blank "><i class="fab fa-facebook grow "></i></a></li>
+                    <li> <a href="https://www.youtube.com/channel/UCiDFs4udzbnGkwypt1-c3tA " target="blank "><i class="fab fa-youtube grow "></i></a></li>
                 </ul>
-                <hr class="light">
-                <div class="text-center webarch-website grow2">
-                    <a href="https://webarchsrm.com/" target="_blank"><i class="fas fa-angle-double-right"></i> Visit Webarch Website</a>
+                <hr class="light ">
+                <div class="text-center webarch-website grow2 ">
+                    <a href="https://webarchsrm.com/ " target="_blank "><i class="fas fa-angle-double-right "></i> Visit Webarch Website</a>
                 </div>
             </div>
 
             <div class="col-md-4 p1 ">
-                <h4 style="text-align: center;color:white;">INFORMATION</h4>
-                <hr class="light">
-                <div class="text-center webarch-website grow2">
-                    <a href="#" target="_blank"> Accessibility</a>
+                <h4 style="text-align: center;color:white; ">INFORMATION</h4>
+                <hr class="light ">
+                <div class="text-center webarch-website grow2 ">
+                    <a href="# " target="_blank "> Accessibility</a>
                 </div>
-                <div class="text-center webarch-website grow2">
-                    <a href="#" target="_blank"> Privacy Policy</a>
+                <div class="text-center webarch-website grow2 ">
+                    <a href="# " target="_blank "> Privacy Policy</a>
                 </div>
-                <div class="text-center webarch-website grow2">
-                    <a href="#" target="_blank"> Terms & Condition</a>
+                <div class="text-center webarch-website grow2 ">
+                    <a href="# " target="_blank "> Terms & Condition</a>
                 </div>
 
 
             </div>
-            <div class="col-12 p1">
-                <hr class="light-100">
-                <h5 style="text-align: center;color:white;"> ©Webarch 2021</h5>
+            <div class="col-12 p1 ">
+                <hr class="light-100 ">
+                <h5 style="text-align: center;color:white; "> ©Webarch 2021</h5>
             </div>
         </div>
     </div>
