added google signin in register page

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -57,7 +57,7 @@
                             <img class="g-img grow " src="./images/google.png" alt="google signin">
                         </button>
                     </div>
-                    <!-- <button type="submit" class="loginbtn btn my-0">Login</button> -->
+                    <!-- <button type="submit" clsass="loginbtn btn my-0">Login</button> -->
                 </form>
             </div>
             <div>
