Updated pages & added forgot pass page

--- a/frontend/forgot.html
+++ b/frontend/forgot.html
@@ -16,7 +16,7 @@
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- Local Css -->
-    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/forgot.css" />
     <link rel="shortcut icon" type="logo" href="favicon.png" />
 
     <title>WebarchForms</title>
@@ -37,29 +37,18 @@
         <div class="forms-container">
           <div class="login">
             <form action="" class="login">
-              <h2 class="login text-center"><img src="./images/logo.png" alt="" /> Login</h2>
+              <h2 class="login text-center"><img src="./images/logo.png" alt="" /> Recover Password</h2>
               <div class="input-field text-center">
                 <i class="fas fa-envelope"></i>
                 <input type="email" placeholder="Email" />
               </div>
-              <div class="input-field text-center">
-                <i class="fas fa-lock"></i>
-                <input type="password" placeholder="Password" />
-              </div>
-              <a class="forgot my-2 text-center text-decoration-underline" href="./forgot.html">Forgot password?</a>
 
               <div class="text-center">
-                <button type="submit" value="Login" class="btn-solid grow my-2">Login</button>
+                <button type="submit" value="Login" class="btn-solid grow my-2">Reset</button>
               </div>
-              <p class="social-text text-center">Or Register a new account</p>
-              <div class="social-media text-center">
-                <button class="text-center">
-                  <img class="images grow" src="./images/google.png" alt="google image" />
-                </button>
-                <p class="Or text-center my-2">OR</p>
-                <p>
-                  <a href="./register.html" button class="btn">Register</a>
-                </p>
+              <p class="social-text text-center mt-3 mb-0">Don't have an account?</p>
+              <div class="text-center">
+                <a href="./register.html" button class="btn">Register</a>
               </div>
             </form>
           </div>
